<resources>
    <string name="app_name">Austin Breweries</string>
    <string name="brewery_logo">Brewery Logo</string>
    <string name="brewery_image">Brewery Image</string>
    <string name="title_activity_brewery_detail">Brewery Details</string>
    <string name="beer_list">Beer List</string>
    <string name="other_info">Other Useful Info</string>
    <string name="location_header">Location</string>
    <string name="tour_hours_header">Tour Hours</string>
    <string name="taproom_hours_header">Taproom Hours</string>
    <string name="phone_label">Phone:</string>
    <string name="website_label">Website:</string>
    <string name="twitter_label">Twitter:</string>
    <string name="unable_to_make_call">Unable to make call.</string>
    <string name="unable_to_view_website">Unable to view website.</string>
    <string name="style_template">"Style: %1$s"</string>
    <string name="abv_template">"ABV: %1$.2f%%"</string>
    <string name="ibu_template">"IBU: %1$d"</string>
    <string name="brewery_of_the_day">Brewery of the Day</string>
</resources>
